--- a/Notebooks/02_01_Repaso Basico Pandas.ipynb
+++ b/Notebooks/02_01_Repaso Basico Pandas.ipynb
@@ -1792,6 +1792,178 @@
     "df= df.groupby(\"Col1\").sum()\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Datos en json con Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>precio</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>categoria_nombre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ordenador</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>Electrónica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tablet</td>\n",
+       "      <td>500</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>Electrónica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pantalón</td>\n",
+       "      <td>40</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Ropa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>camiseta</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>Ropa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      nombre  precio  rating categoria_nombre\n",
+       "0  ordenador    1000     4.5      Electrónica\n",
+       "1     tablet     500     4.7      Electrónica\n",
+       "2   pantalón      40     4.0             Ropa\n",
+       "3   camiseta      20     4.2             Ropa"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "\n",
+    "\n",
+    "#generamos datos en json para el ejemplo\n",
+    "\n",
+    "datos ={\n",
+    "    \"tienda\":{\n",
+    "        \"categorias\":[\n",
+    "            {\"nombre\":\"Electrónica\", \"productos\":[{\"nombre\":\"ordenador\",\"precio\":1000, \"rating\":4.5},{\"nombre\":\"tablet\",\"precio\":500, \"rating\":4.7}]},\n",
+    "            {\"nombre\":\"Ropa\", \"productos\":[{\"nombre\":\"pantalón\",\"precio\":40, \"rating\":4.0},{\"nombre\":\"camiseta\",\"precio\":20, \"rating\":4.2}]}\n",
+    "        ],\n",
+    "        \"ubicación\":{\"ciudad\":\"Madrid\", \"region\":\"Centro\"}\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "#Necesitamos \"aplanar\" los datos para poder cargarlos en un DataFrame\n",
+    "\n",
+    "df=pd.json_normalize(datos['tienda']['categorias'], record_path='productos', meta=['nombre'], meta_prefix=\"categoria_\")\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>categoria_nombre</th>\n",
+       "      <th>precio</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Electrónica</td>\n",
+       "      <td>750.0</td>\n",
+       "      <td>4.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ropa</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  categoria_nombre  precio  rating\n",
+       "0      Electrónica   750.0     4.6\n",
+       "1             Ropa    30.0     4.1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos_categorias = df.groupby('categoria_nombre').agg({'precio':'mean', 'rating':'mean'}).reset_index()\n",
+    "datos_categorias"
+   ]
   }
  ],
  "metadata": {
