--- a/Notebooks/03_01_Nulos y repetidos.ipynb
+++ b/Notebooks/03_01_Nulos y repetidos.ipynb
@@ -1680,55 +1680,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "049c4AQ133l9"
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import sqlite3\n",
-    "import numpy as np"
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv() #lee las variables de entorno del archivo .env\n",
+    "\n",
+    "servidor = os.getenv(\"SERVIDOR_MYSQL\")\n",
+    "usuario = os.getenv(\"USUARIO_MYSQL\")\n",
+    "password = os.getenv(\"PASSWORD_MYSQL\")\n",
+    "\n",
+    "import mysql.connector\n",
+    "try:\n",
+    "    cnx = mysql.connector.connect(user=usuario, password=password,\n",
+    "                              host=servidor, database='sakila') # Definimos la cadena de conexión de la base de datos e intentamos conectar\n",
+    "    cursor=cnx.cursor() #Creamos una cursos para poder ejecutar consultas\n",
+    "    cursor.execute(\"SELECT * FROM actor\") #Ejecutamos la consulta SQL\n",
+    "    resultado = cursor.fetchall() # Obtenemos todas las filas de la consulta\n",
+    "except mysql.connector.Error as err:\n",
+    "    print(\"Error conectando a la base de datos \" + err)\n",
+    "    \n",
+    "cursor.close() \n",
+    "cnx.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 17856,
-     "status": "ok",
-     "timestamp": 1621013876526,
-     "user": {
-      "displayName": "Machine Learning",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GhwBRPV9dlAQMjYJcrnyebdRqxGjgfWs74B3NV3=s64",
-      "userId": "05609927355646341864"
-     },
-     "user_tz": -120
-    },
-    "id": "RyABLM3R9H2i",
-    "outputId": "81dae4bf-33cd-4d4b-e0d9-11dd5c9670b9"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mounted at /content/drive\n"
-     ]
-    }
-   ],
-   "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1770,106 +1753,76 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CodCliente</th>\n",
-       "      <th>FechaNacimiento</th>\n",
-       "      <th>EstadoCivil</th>\n",
-       "      <th>Sexo</th>\n",
-       "      <th>IngresosAnuales</th>\n",
-       "      <th>HijosACargo</th>\n",
-       "      <th>NivelAcademico</th>\n",
-       "      <th>Ocupacion</th>\n",
+       "      <th>actor_id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>timestamp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>000020</td>\n",
-       "      <td>1976-04-08</td>\n",
-       "      <td>M</td>\n",
-       "      <td>M</td>\n",
-       "      <td>90000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PENELOPE</td>\n",
+       "      <td>GUINESS</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>000026</td>\n",
-       "      <td>1975-05-14</td>\n",
-       "      <td>S</td>\n",
-       "      <td>M</td>\n",
-       "      <td>60000.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NICK</td>\n",
+       "      <td>WAHLBERG</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>000029</td>\n",
-       "      <td>1975-08-12</td>\n",
-       "      <td>M</td>\n",
-       "      <td>M</td>\n",
-       "      <td>60000.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ED</td>\n",
+       "      <td>CHASE</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>000046</td>\n",
-       "      <td>1978-02-15</td>\n",
-       "      <td>S</td>\n",
-       "      <td>F</td>\n",
-       "      <td>70000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>4</td>\n",
+       "      <td>JENNIFER</td>\n",
+       "      <td>DAVIS</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>000047</td>\n",
-       "      <td>1978-08-08</td>\n",
-       "      <td>S</td>\n",
-       "      <td>F</td>\n",
-       "      <td>80000.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>5</td>\n",
+       "      <td>JOHNNY</td>\n",
+       "      <td>LOLLOBRIGIDA</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  CodCliente FechaNacimiento  ... NivelAcademico                  Ocupacion\n",
-       "0     000020      1976-04-08  ...   Licenciatura  Profesional especializado\n",
-       "1     000026      1975-05-14  ...   Licenciatura  Profesional especializado\n",
-       "2     000029      1975-08-12  ...   Licenciatura  Profesional especializado\n",
-       "3     000046      1978-02-15  ...   Licenciatura  Profesional especializado\n",
-       "4     000047      1978-08-08  ...   Licenciatura  Profesional especializado\n",
-       "\n",
-       "[5 rows x 8 columns]"
+       "   actor_id first_name     last_name           timestamp\n",
+       "0         1   PENELOPE       GUINESS 2006-02-15 04:34:33\n",
+       "1         2       NICK      WAHLBERG 2006-02-15 04:34:33\n",
+       "2         3         ED         CHASE 2006-02-15 04:34:33\n",
+       "3         4   JENNIFER         DAVIS 2006-02-15 04:34:33\n",
+       "4         5     JOHNNY  LOLLOBRIGIDA 2006-02-15 04:34:33"
       ]
      },
-     "execution_count": 21,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 3,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conn = sqlite3.connect('/content/drive/MyDrive/Datos/Tiendas24H.sqlite')\n",
-    "query = \"select c.CodCliente, FechaNacimiento, EstadoCivil, Sexo,IngresosAnuales,HijosACargo, N.NivelAcademico, O.Ocupacion from clientes c inner join NivelAcademico N    on c.NivelAcademico = N.Codigo     inner join Ocupacion O on c.Ocupacion = o.Codigo\"\n",
-    "\n",
-    "df = pd.read_sql_query(query,conn)\n",
-    "\n",
-    "df.head()"
+    "import pandas as pd\n",
+    "#Convertimos el resultado en un DataFrame de Pandas seleccionando solo cuatro columnas\n",
+    "df = pd.DataFrame(resultado, columns=['actor_id','first_name','last_name','timestamp']) \n",
+    "df.head() # Mostramos las cinco primeras filas del DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1892,21 +1845,15 @@
     {
      "data": {
       "text/plain": [
-       "CodCliente         0\n",
-       "FechaNacimiento    0\n",
-       "EstadoCivil        1\n",
-       "Sexo               1\n",
-       "IngresosAnuales    1\n",
-       "HijosACargo        1\n",
-       "NivelAcademico     1\n",
-       "Ocupacion          1\n",
+       "actor_id      0\n",
+       "first_name    0\n",
+       "last_name     0\n",
+       "timestamp     0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 6,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -1916,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "UXrrQuOW33l9"
    },
@@ -1927,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1969,71 +1916,47 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CodCliente</th>\n",
-       "      <th>FechaNacimiento</th>\n",
-       "      <th>EstadoCivil</th>\n",
-       "      <th>Sexo</th>\n",
-       "      <th>IngresosAnuales</th>\n",
-       "      <th>HijosACargo</th>\n",
-       "      <th>NivelAcademico</th>\n",
-       "      <th>Ocupacion</th>\n",
+       "      <th>actor_id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>timestamp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>000020</td>\n",
-       "      <td>1976-04-08</td>\n",
-       "      <td>M</td>\n",
-       "      <td>M</td>\n",
-       "      <td>90000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PENELOPE</td>\n",
+       "      <td>GUINESS</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>000026</td>\n",
-       "      <td>1975-05-14</td>\n",
-       "      <td>S</td>\n",
-       "      <td>M</td>\n",
-       "      <td>60000.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NICK</td>\n",
+       "      <td>WAHLBERG</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>000029</td>\n",
-       "      <td>1975-08-12</td>\n",
-       "      <td>M</td>\n",
-       "      <td>M</td>\n",
-       "      <td>60000.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ED</td>\n",
+       "      <td>CHASE</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>000046</td>\n",
-       "      <td>1978-02-15</td>\n",
-       "      <td>S</td>\n",
-       "      <td>F</td>\n",
-       "      <td>70000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>4</td>\n",
+       "      <td>JENNIFER</td>\n",
+       "      <td>DAVIS</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>000047</td>\n",
-       "      <td>1978-08-08</td>\n",
-       "      <td>S</td>\n",
-       "      <td>F</td>\n",
-       "      <td>80000.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>5</td>\n",
+       "      <td>JOHNNY</td>\n",
+       "      <td>LOLLOBRIGIDA</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2041,92 +1964,66 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2436</th>\n",
-       "      <td>Y1795344R</td>\n",
-       "      <td>1944-09-17</td>\n",
-       "      <td>M</td>\n",
-       "      <td>F</td>\n",
-       "      <td>70000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Estudios de postgrado</td>\n",
-       "      <td>Mando intermedio</td>\n",
+       "      <th>195</th>\n",
+       "      <td>196</td>\n",
+       "      <td>BELA</td>\n",
+       "      <td>WALKEN</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2437</th>\n",
-       "      <td>Y2404085R</td>\n",
-       "      <td>1973-01-04</td>\n",
-       "      <td>S</td>\n",
-       "      <td>F</td>\n",
-       "      <td>90000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Estudios universitarios (en curso)</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <th>196</th>\n",
+       "      <td>197</td>\n",
+       "      <td>REESE</td>\n",
+       "      <td>WEST</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2438</th>\n",
-       "      <td>Y2544794L</td>\n",
-       "      <td>1973-08-26</td>\n",
-       "      <td>M</td>\n",
-       "      <td>M</td>\n",
-       "      <td>90000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Estudios universitarios (en curso)</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <th>197</th>\n",
+       "      <td>198</td>\n",
+       "      <td>MARY</td>\n",
+       "      <td>KEITEL</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2439</th>\n",
-       "      <td>Y2671043K</td>\n",
-       "      <td>1973-10-23</td>\n",
-       "      <td>S</td>\n",
-       "      <td>F</td>\n",
-       "      <td>90000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Estudios universitarios (en curso)</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <th>198</th>\n",
+       "      <td>199</td>\n",
+       "      <td>JULIA</td>\n",
+       "      <td>FAWCETT</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2440</th>\n",
-       "      <td>Y2716961P</td>\n",
-       "      <td>1973-03-16</td>\n",
-       "      <td>M</td>\n",
-       "      <td>M</td>\n",
-       "      <td>110000.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Mando intermedio</td>\n",
+       "      <th>199</th>\n",
+       "      <td>200</td>\n",
+       "      <td>THORA</td>\n",
+       "      <td>TEMPLE</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2440 rows × 8 columns</p>\n",
+       "<p>200 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     CodCliente  ...                  Ocupacion\n",
-       "0        000020  ...  Profesional especializado\n",
-       "1        000026  ...  Profesional especializado\n",
-       "2        000029  ...  Profesional especializado\n",
-       "3        000046  ...  Profesional especializado\n",
-       "4        000047  ...  Profesional especializado\n",
-       "...         ...  ...                        ...\n",
-       "2436  Y1795344R  ...           Mando intermedio\n",
-       "2437  Y2404085R  ...  Profesional especializado\n",
-       "2438  Y2544794L  ...  Profesional especializado\n",
-       "2439  Y2671043K  ...  Profesional especializado\n",
-       "2440  Y2716961P  ...           Mando intermedio\n",
+       "     actor_id first_name     last_name           timestamp\n",
+       "0           1   PENELOPE       GUINESS 2006-02-15 04:34:33\n",
+       "1           2       NICK      WAHLBERG 2006-02-15 04:34:33\n",
+       "2           3         ED         CHASE 2006-02-15 04:34:33\n",
+       "3           4   JENNIFER         DAVIS 2006-02-15 04:34:33\n",
+       "4           5     JOHNNY  LOLLOBRIGIDA 2006-02-15 04:34:33\n",
+       "..        ...        ...           ...                 ...\n",
+       "195       196       BELA        WALKEN 2006-02-15 04:34:33\n",
+       "196       197      REESE          WEST 2006-02-15 04:34:33\n",
+       "197       198       MARY        KEITEL 2006-02-15 04:34:33\n",
+       "198       199      JULIA       FAWCETT 2006-02-15 04:34:33\n",
+       "199       200      THORA        TEMPLE 2006-02-15 04:34:33\n",
        "\n",
-       "[2440 rows x 8 columns]"
+       "[200 rows x 4 columns]"
       ]
      },
-     "execution_count": 24,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 8,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -2143,12 +2040,8 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "18f07aa1f218bd815af44c10d679f476605f722da72676851e9ef086401d84b6"
-    }
-   },
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -2161,7 +2054,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
