--- a/Notebooks/02_02_Pandas y Bases de Datos.ipynb
+++ b/Notebooks/02_02_Pandas y Bases de Datos.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,19 +28,19 @@
     "try:\n",
     "    cnx = mysql.connector.connect(user=usuario, password=password,\n",
     "                              host=servidor, database='sakila') # Definimos la cadena de conexión de la base de datos e intentamos conectar\n",
-    "    cursor=cnx.cursor() #Creamos una cursos para poder ejecutar consultas\n",
+    "    cursor=cnx.cursor() #Creamos un cursor para poder ejecutar consultas\n",
     "    cursor.execute(\"SELECT * FROM actor\") #Ejecutamos la consulta SQL\n",
     "    resultado = cursor.fetchall() # Obtenemos todas las filas de la consulta\n",
+    "    cursor.close() \n",
+    "    cnx.close()\n",
     "except mysql.connector.Error as err:\n",
     "    print(\"Error conectando a la base de datos \" + err)\n",
-    "    \n",
-    "cursor.close() \n",
-    "cnx.close()"
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "4         5     JOHNNY  LOLLOBRIGIDA 2006-02-15 04:34:33"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "4         5     JOHNNY  LOLLOBRIGIDA 2006-02-15 04:34:33"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,6 +221,113 @@
     "#Convertimos el resultado en un DataFrame de Pandas seleccionando todas las columnas\n",
     "df_actor = pd.DataFrame(resultado, columns=cursor.column_names) \n",
     "df_actor.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\anton\\AppData\\Local\\Temp\\ipykernel_20668\\3482251282.py:9: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(\"SELECT * FROM actor\", cnx)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actor_id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>last_update</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>PENELOPE</td>\n",
+       "      <td>GUINESS</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NICK</td>\n",
+       "      <td>WAHLBERG</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>ED</td>\n",
+       "      <td>CHASE</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>JENNIFER</td>\n",
+       "      <td>DAVIS</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>JOHNNY</td>\n",
+       "      <td>LOLLOBRIGIDA</td>\n",
+       "      <td>2006-02-15 04:34:33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   actor_id first_name     last_name         last_update\n",
+       "0         1   PENELOPE       GUINESS 2006-02-15 04:34:33\n",
+       "1         2       NICK      WAHLBERG 2006-02-15 04:34:33\n",
+       "2         3         ED         CHASE 2006-02-15 04:34:33\n",
+       "3         4   JENNIFER         DAVIS 2006-02-15 04:34:33\n",
+       "4         5     JOHNNY  LOLLOBRIGIDA 2006-02-15 04:34:33"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Como alternativa podemos utilizar el método read_sql de Pandas para ejecutar la consulta y obtener el resultado en un DataFrame\n",
+    "#Obviamente la conexión debe de estar abierta. Debemos de acordarnos de cerrarla cuando finalicemos\n",
+    "try:\n",
+    "    cnx = mysql.connector.connect(user=usuario, password=password,\n",
+    "                              host=servidor, database='sakila')\n",
+    "except mysql.connector.Error as err:\n",
+    "    print(\"Error conectando a la base de datos \" + err)\n",
+    "\n",
+    "df = pd.read_sql(\"SELECT * FROM actor\", cnx)\n",
+    "df.head()"
    ]
   },
   {
@@ -246,11 +353,12 @@
     "        cursor=cnx.cursor() #Creamos una cursos para poder ejecutar consultas\n",
     "        cursor.execute(f\"SELECT * FROM {tabla}\") #Ejecutamos la consulta SQL\n",
     "        resultado = cursor.fetchall() # Obtenemos todas las filas de la consulta\n",
+    "        cursor.close() \n",
+    "        cnx.close()\n",
     "    except mysql.connector.Error as err:\n",
     "        print(\"Error conectando a la base de datos \" + err)\n",
     "\n",
-    "    cursor.close() \n",
-    "    cnx.close()\n",
+    "    \n",
     "    return pd.DataFrame(resultado, columns=cursor.column_names) #Convertimos el resultado en un DataFrame de Pandas seleccionando todas las columnas y lo devolvemos"
    ]
   },
@@ -1169,11 +1277,12 @@
     "        cursor=cnx.cursor() #Creamos una cursos para poder ejecutar consultas\n",
     "        cursor.execute(consulta) #Ejecutamos la consulta SQL\n",
     "        resultado = cursor.fetchall() # Obtenemos todas las filas de la consulta\n",
+    "        cursor.close() \n",
+    "        cnx.close()\n",
     "    except mysql.connector.Error as err:\n",
     "        print(\"Error conectando a la base de datos \" + str(err))\n",
     "\n",
-    "    cursor.close() \n",
-    "    cnx.close()\n",
+    "    \n",
     "    return pd.DataFrame(resultado, columns=cursor.column_names) #Convertimos el resultado en un DataFrame de Pandas seleccionando todas las columnas y lo devolvemos"
    ]
   },
