--- a/Notebooks/04_03_Escalado de Caracteristicas.ipynb
+++ b/Notebooks/04_03_Escalado de Caracteristicas.ipynb
@@ -41,13 +41,13 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import sqlite3\n",
-    "import numpy as np"
+    "import os\n",
+    "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -66,23 +66,26 @@
     "id": "vh6nSP8r-NPq",
     "outputId": "c941de53-1c52-477f-9be8-237e3f8c8d71"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mounted at /content/drive\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
+    "load_dotenv() #lee las variables de entorno del archivo .env\n",
+    "\n",
+    "servidor = os.getenv(\"SERVIDOR_MYSQL\")\n",
+    "usuario = os.getenv(\"USUARIO_MYSQL\")\n",
+    "password = os.getenv(\"PASSWORD_MYSQL\")\n",
+    "\n",
+    "import mysql.connector\n",
+    "try:\n",
+    "    cnx = mysql.connector.connect(user=usuario, password=password,\n",
+    "                              host=servidor, database='sakila') # Definimos la cadena de conexión de la base de datos e intentamos conectar\n",
+    "    cursor=cnx.cursor() #Creamos un cursor para poder ejecutar consultas    \n",
+    "except :\n",
+    "    print(\"Error conectando a la base de datos \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -104,6 +107,14 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\adminsql\\AppData\\Local\\Temp\\ipykernel_4624\\2724526907.py:2: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query,cnx)\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -124,106 +135,157 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CodCliente</th>\n",
-       "      <th>FechaNacimiento</th>\n",
-       "      <th>EstadoCivil</th>\n",
-       "      <th>Sexo</th>\n",
-       "      <th>IngresosAnuales</th>\n",
-       "      <th>HijosACargo</th>\n",
-       "      <th>NivelAcademico</th>\n",
-       "      <th>Ocupacion</th>\n",
+       "      <th>film_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>description</th>\n",
+       "      <th>release_year</th>\n",
+       "      <th>language_id</th>\n",
+       "      <th>original_language_id</th>\n",
+       "      <th>rental_duration</th>\n",
+       "      <th>rental_rate</th>\n",
+       "      <th>length</th>\n",
+       "      <th>replacement_cost</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>special_features</th>\n",
+       "      <th>last_update</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>000020</td>\n",
-       "      <td>1976-04-08</td>\n",
-       "      <td>M</td>\n",
-       "      <td>M</td>\n",
-       "      <td>90000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ACADEMY DINOSAUR</td>\n",
+       "      <td>A Epic Drama of a Feminist And a Mad Scientist...</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>86</td>\n",
+       "      <td>20.99</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>{Deleted Scenes, Behind the Scenes}</td>\n",
+       "      <td>2006-02-15 06:03:42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>000026</td>\n",
-       "      <td>1975-05-14</td>\n",
-       "      <td>S</td>\n",
-       "      <td>M</td>\n",
-       "      <td>60000.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ACE GOLDFINGER</td>\n",
+       "      <td>A Astounding Epistle of a Database Administrat...</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>48</td>\n",
+       "      <td>12.99</td>\n",
+       "      <td>G</td>\n",
+       "      <td>{Deleted Scenes, Trailers}</td>\n",
+       "      <td>2006-02-15 06:03:42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>000029</td>\n",
-       "      <td>1975-08-12</td>\n",
-       "      <td>M</td>\n",
-       "      <td>M</td>\n",
-       "      <td>60000.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ADAPTATION HOLES</td>\n",
+       "      <td>A Astounding Reflection of a Lumberjack And a ...</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>50</td>\n",
+       "      <td>18.99</td>\n",
+       "      <td>NC-17</td>\n",
+       "      <td>{Deleted Scenes, Trailers}</td>\n",
+       "      <td>2006-02-15 06:03:42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>000046</td>\n",
-       "      <td>1978-02-15</td>\n",
-       "      <td>S</td>\n",
-       "      <td>F</td>\n",
-       "      <td>70000.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>4</td>\n",
+       "      <td>AFFAIR PREJUDICE</td>\n",
+       "      <td>A Fanciful Documentary of a Frisbee And a Lumb...</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>117</td>\n",
+       "      <td>26.99</td>\n",
+       "      <td>G</td>\n",
+       "      <td>{Behind the Scenes, Commentaries}</td>\n",
+       "      <td>2006-02-15 06:03:42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>000047</td>\n",
-       "      <td>1978-08-08</td>\n",
-       "      <td>S</td>\n",
-       "      <td>F</td>\n",
-       "      <td>80000.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Licenciatura</td>\n",
-       "      <td>Profesional especializado</td>\n",
+       "      <td>5</td>\n",
+       "      <td>AFRICAN EGG</td>\n",
+       "      <td>A Fast-Paced Documentary of a Pastry Chef And ...</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>130</td>\n",
+       "      <td>22.99</td>\n",
+       "      <td>G</td>\n",
+       "      <td>{Deleted Scenes}</td>\n",
+       "      <td>2006-02-15 06:03:42</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  CodCliente FechaNacimiento  ... NivelAcademico                  Ocupacion\n",
-       "0     000020      1976-04-08  ...   Licenciatura  Profesional especializado\n",
-       "1     000026      1975-05-14  ...   Licenciatura  Profesional especializado\n",
-       "2     000029      1975-08-12  ...   Licenciatura  Profesional especializado\n",
-       "3     000046      1978-02-15  ...   Licenciatura  Profesional especializado\n",
-       "4     000047      1978-08-08  ...   Licenciatura  Profesional especializado\n",
+       "   film_id             title  \\\n",
+       "0        1  ACADEMY DINOSAUR   \n",
+       "1        2    ACE GOLDFINGER   \n",
+       "2        3  ADAPTATION HOLES   \n",
+       "3        4  AFFAIR PREJUDICE   \n",
+       "4        5       AFRICAN EGG   \n",
        "\n",
-       "[5 rows x 8 columns]"
+       "                                         description  release_year  \\\n",
+       "0  A Epic Drama of a Feminist And a Mad Scientist...          2006   \n",
+       "1  A Astounding Epistle of a Database Administrat...          2006   \n",
+       "2  A Astounding Reflection of a Lumberjack And a ...          2006   \n",
+       "3  A Fanciful Documentary of a Frisbee And a Lumb...          2006   \n",
+       "4  A Fast-Paced Documentary of a Pastry Chef And ...          2006   \n",
+       "\n",
+       "   language_id original_language_id  rental_duration  rental_rate  length  \\\n",
+       "0            1                 None                6         0.99      86   \n",
+       "1            1                 None                3         4.99      48   \n",
+       "2            1                 None                7         2.99      50   \n",
+       "3            1                 None                5         2.99     117   \n",
+       "4            1                 None                6         2.99     130   \n",
+       "\n",
+       "   replacement_cost rating                     special_features  \\\n",
+       "0             20.99     PG  {Deleted Scenes, Behind the Scenes}   \n",
+       "1             12.99      G           {Deleted Scenes, Trailers}   \n",
+       "2             18.99  NC-17           {Deleted Scenes, Trailers}   \n",
+       "3             26.99      G    {Behind the Scenes, Commentaries}   \n",
+       "4             22.99      G                     {Deleted Scenes}   \n",
+       "\n",
+       "          last_update  \n",
+       "0 2006-02-15 06:03:42  \n",
+       "1 2006-02-15 06:03:42  \n",
+       "2 2006-02-15 06:03:42  \n",
+       "3 2006-02-15 06:03:42  \n",
+       "4 2006-02-15 06:03:42  "
       ]
      },
-     "execution_count": 3,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 4,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conn = sqlite3.connect('/content/drive/MyDrive/Datos/Tiendas24H.sqlite')\n",
-    "query = \"select c.CodCliente, FechaNacimiento, EstadoCivil, Sexo,IngresosAnuales, HijosACargo, N.NivelAcademico, O.Ocupacion from clientes c inner join NivelAcademico N    on c.NivelAcademico = N.Codigo     inner join Ocupacion O on c.Ocupacion = o.Codigo\"\n",
-    "\n",
-    "df = pd.read_sql_query(query,conn)\n",
-    "\n",
+    "query = \"SELECT * FROM film\"\n",
+    "df = pd.read_sql(query,cnx)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "executionInfo": {
      "elapsed": 1400,
@@ -240,7 +302,7 @@
    },
    "outputs": [],
    "source": [
-    "caracteristicas =[\"IngresosAnuales\",\"HijosACargo\"]\n",
+    "caracteristicas =[\"rental_rate\",\"length\"]\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
     "X = scaler.fit_transform(df[caracteristicas])"
@@ -248,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -271,19 +333,17 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.88021336, -0.67313748],\n",
-       "       [-0.01417334,  1.29309012],\n",
-       "       [-0.01417334,  1.29309012],\n",
+       "array([[-1.20930755, -0.72444483],\n",
+       "       [ 1.2214614 , -1.66489657],\n",
+       "       [ 0.00607692, -1.61539911],\n",
        "       ...,\n",
-       "       [ 0.88021336, -0.67313748],\n",
-       "       [ 0.88021336, -0.67313748],\n",
-       "       [ 1.47647117,  0.63768092]])"
+       "       [-1.20930755, -0.25421896],\n",
+       "       [ 0.00607692, -0.35321388],\n",
+       "       [ 1.2214614 , -1.61539911]], shape=(1000, 2))"
       ]
      },
-     "execution_count": 5,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 7,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -308,8 +368,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit",
-   "name": "python_defaultSpec_1600709317385"
+   "display_name": "entornoIFFE",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -321,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
