--- a/Notebooks/02_01_Repaso Basico Pandas.ipynb
+++ b/Notebooks/02_01_Repaso Basico Pandas.ipynb
@@ -1879,7 +1879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1950,7 +1950,7 @@
        "3   camiseta      20     4.2             Ropa"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1980,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2032,7 +2032,7 @@
        "1             Ropa    30.0     4.1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2040,6 +2040,91 @@
    "source": [
     "datos_categorias = df.groupby('categoria_nombre').agg({'precio':'mean', 'rating':'mean'}).reset_index()\n",
     "datos_categorias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nombre</th>\n",
+       "      <th>precio</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>categoria_nombre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ordenador</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>Electrónica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tablet</td>\n",
+       "      <td>500</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>Electrónica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pantalón</td>\n",
+       "      <td>40</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Ropa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>camiseta</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>Ropa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      nombre  precio  rating categoria_nombre\n",
+       "0  ordenador    1000     4.5      Electrónica\n",
+       "1     tablet     500     4.7      Electrónica\n",
+       "2   pantalón      40     4.0             Ropa\n",
+       "3   camiseta      20     4.2             Ropa"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Para ordenar un dataframe por una columna en concreto, podemos utilizar el método sort_values\n",
+    "\n",
+    "df.sort_values(by='precio', ascending=False , inplace=True) ## Ordenamos por precio de mayor a menor\n",
+    "df.head()"
    ]
   }
  ],
