--- a/Notebooks/02_02_Pandas y Bases de Datos.ipynb
+++ b/Notebooks/02_02_Pandas y Bases de Datos.ipynb
@@ -33,8 +33,8 @@
     "    resultado = cursor.fetchall() # Obtenemos todas las filas de la consulta\n",
     "    cursor.close() \n",
     "    cnx.close()\n",
-    "except mysql.connector.Error as err:\n",
-    "    print(\"Error conectando a la base de datos \" + err)\n",
+    "except :\n",
+    "    print(\"Error conectando a la base de datos \")\n",
     "    \n"
    ]
   },
