--- a/Notebooks/03_01_Nulos y repetidos.ipynb
+++ b/Notebooks/03_01_Nulos y repetidos.ipynb
@@ -105,9 +105,7 @@
       ]
      },
      "execution_count": 1,
-     "metadata": {
-      "tags": []
-     },
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -125,6 +123,15 @@
     "df\n",
     "#En el código anterior, leemos datos en formato CSV en un DataFrame pandas via la función read_csv y vemos como las dos celdas que faldan se \"rellenan\" con NaN \n",
     "#La función StringIO solo se usa para facilitar la demostración para simular que tenemos un fichero real."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
    ]
   },
   {
