--- a/Notebooks/04_02_Codificacion de Variables.ipynb
+++ b/Notebooks/04_02_Codificacion de Variables.ipynb
@@ -1969,7 +1969,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "entornoIFFE",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1983,7 +1983,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
